# hdx-scraper-cookiecutter

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  requirements.txt
.config/: pre-commit-config.yaml  ruff.toml
hdx-scraper-{{cookiecutter.scraper_name}}/: .gitignore  README.md  hatch.toml  pyproject.toml  run.py  {{cookiecutter.scraper_name}}.py
hdx-scraper-{{cookiecutter.scraper_name}}/.config/: hdx_dataset_static.yaml  pre-commit-config.yaml  project_configuration.yaml  ruff.toml
hdx-scraper-{{cookiecutter.scraper_name}}/.github/workflows/: publish.yaml  run-python-script.yaml
hdx-scraper-{{cookiecutter.scraper_name}}/src/hdx/scraper/{{cookiecutter.scraper_name}}/: __main__.py  {{cookiecutter.scraper_name}}.py
hdx-scraper-{{cookiecutter.scraper_name}}/src/hdx/scraper/{{cookiecutter.scraper_name}}/config/: hdx_dataset_static.yaml
hdx-scraper-{{cookiecutter.scraper_name}}/tests/: conftest.py  test_{{cookiecutter.scraper_name}}.py
